--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-currency-input": "^1.1.0",
     "react-native-dropdown-select-list": "^1.0.23",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-mask-input": "^1.2.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
